--- a/src/components/Cabecalho.module.css
+++ b/src/components/Cabecalho.module.css
@@ -2,38 +2,42 @@
 .cabecalho{
     display: flex;
     flex-direction: row;
-    background-color: #0d0d0d;
+    background-color: gray;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     justify-content: space-around;
+    align-items: center;
 
     & h1{
         text-align: center;
     }
 
     & img{
-        width: 5%;
+        width: 8%;
     }
 
     & nav{
+        float: right;
         
         & ul{
             list-style: none;
 
             & li{
                 display: inline-block;
-               
+
                 & a{
                     text-decoration: none;
                     color: #fff;
-                    display: block;
+                    display: inline-block;
                     font-weight: bold;
                     padding: 50px 10px;
-
+                    transition: background-color ease-out 300ms, color ease-out 300ms;  
+                    
                     &:hover{
-                        background-color: #fff;
-                        color: #0d0d0d;
+                        background-color:lightblue ;
+                        color: black;
                     }
+
                 }
             }
         }
