--- a/src/components/Cabecalho/Cabecalho.module.css
+++ b/src/components/Cabecalho/Cabecalho.module.css
@@ -2,7 +2,7 @@
 .cabecalho{
     display: flex;
     flex-direction: row;
-    background-color: gray;
+    background-color: darkcyan;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     justify-content: space-around;
@@ -13,31 +13,29 @@
     }
 
     & img{
-        width: 8%;
+        width: 5%;
     }
 
     & nav{
-        float: right;
         
         & ul{
             list-style: none;
 
             & li{
                 display: inline-block;
-
+               
                 & a{
                     text-decoration: none;
-                    color: #fff;
-                    display: inline-block;
+                    color: black;
+                    display: block;
                     font-weight: bold;
-                    padding: 50px 10px;
-                    transition: background-color ease-out 300ms, color ease-out 300ms;  
-                    
-                    &:hover{
-                        background-color:lightblue ;
-                        color: black;
-                    }
+                    padding: 30px 10px;
+                    transition: background-color ease-out 300ms, color ease-out 300ms;      
 
+                    &:hover{
+                        background-color: #fff;
+                        color: cadetblue;
+                    }
                 }
             }
         }
