--- a/src/components/Cabecalho/Cabecalho.module.css
+++ b/src/components/Cabecalho/Cabecalho.module.css
@@ -2,8 +2,8 @@
 .cabecalho{
     display: flex;
     flex-direction: row;
-    background-color: darkcyan;
-    color: #fff;
+    background-color: #0d0d0d;
+   
     font-family: Arial, Helvetica, sans-serif;
     justify-content: space-around;
     align-items: center;
@@ -26,7 +26,7 @@
                
                 & a{
                     text-decoration: none;
-                    color: black;
+                    color: #fff;
                     display: block;
                     font-weight: bold;
                     padding: 30px 10px;
@@ -34,7 +34,7 @@
 
                     &:hover{
                         background-color: #fff;
-                        color: cadetblue;
+                        color: #0d0d0d;
                     }
                 }
             }
