--- a/src/components/Cabecalho/Cabecalho.module.css
+++ b/src/components/Cabecalho/Cabecalho.module.css
@@ -2,8 +2,8 @@
 .cabecalho{
     display: flex;
     flex-direction: row;
-    background-color: #0d0d0d;
-   
+    background-color: gray;
+    color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     justify-content: space-around;
     align-items: center;
